--- a/CSS/destino.css
+++ b/CSS/destino.css
@@ -355,6 +355,7 @@ nav {
   grid-template-columns: 350% 350%;
   justify-items: center;
   align-items: center;
+  grid-column-gap: 50px;
 }
 
 .adic {
@@ -793,7 +794,7 @@ footer {
     display: block;
     cursor: pointer;
     margin: 1px;
-    background: linear-gradient(116deg, #4b87f5, rgb(227, 38, 154));
+    background: linear-gradient(116deg, #74a0f1, rgb(250, 83, 186));
     border-radius: 50%;
     position: fixed;
     top: 0;
@@ -806,7 +807,7 @@ footer {
   #abrirmenu:checked ~ .menubtn {
     border-radius: 18%;
     padding: 19px;
-    background: linear-gradient(116deg, rgb(143, 7, 91), #206bf7);
+    background: linear-gradient(116deg, rgb(241, 47, 167), #709beb);
     transition: all 1s;
   }
 
@@ -840,12 +841,12 @@ footer {
   .category_list .category_item {
     display: block;
     margin-bottom: 5px;
-    background: linear-gradient(rgb(233, 95, 217), rgb(255, 255, 255));
+    background: linear-gradient(rgb(240, 136, 228), rgb(255, 255, 255));
     text-align: center;
     color: rgb(27, 3, 3);
     transition: all 0.4s;
-    font-size: 55px;
-    font-family: "Courgette", cursive;
+    font-size: 35px;
+    font-family: "Courgette";
     height: 100px;
   }
   .category_list .category_item:hover {
@@ -853,7 +854,7 @@ footer {
     box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
   }
   .category_list .ct_item-active {
-    background: linear-gradient(rgb(88, 57, 226), rgba(40, 205, 255, 0.815));
+    background: linear-gradient(rgb(154, 136, 235), rgba(126, 221, 250, 0.815));
     text-align: center;
   }
 
