--- a/SASS/origen.scss
+++ b/SASS/origen.scss
@@ -367,6 +367,7 @@ nav {
     grid-template-columns: 350% 350%;
     justify-items: center;
     align-items: center;
+	grid-column-gap: 50px;
 }
 
 .adic{
