detalles de escritura
corregí algunos errores de escritura que no permitian el buen funcionamiento de la pagina

--- a/CSS/destino.css
+++ b/CSS/destino.css
@@ -798,10 +798,10 @@ footer {
     border-radius: 50%;
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     z-index: 1000;
     transition: all 0.9s;
-    padding: 15px;
+    padding: 8px;
   }
 
   #abrirmenu:checked ~ .menubtn {
@@ -815,13 +815,13 @@ footer {
     font-family: "Font Awesome 6 Free";
     font-weight: 900;
     color: #fff2fc;
-    padding: 5px;
+    padding: 3px;
   }
 
   #abrirmenu:checked ~ .category_list {
-    left: 0;
+    right: 0;
     position: fixed;
-    transition: left 0.8s;
+    transition: right 0.8s;
     width: 100%;
     top: 0;
     background: linear-gradient(rgb(255, 186, 244), rgb(255, 255, 255));
@@ -834,7 +834,7 @@ footer {
     top: 0;
     scroll-snap-align: center;
     position: fixed;
-    left: -100%;
+    right: -100%;
     transition: all 0.8s;
     border-radius: 14px;
   }
