--- a/CSS/destino.css
+++ b/CSS/destino.css
@@ -15,7 +15,6 @@
 /* FOOTER */
 * {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: rgba(241, 161, 217, 0.082);
   box-sizing: border-box;
 }
 
@@ -158,6 +157,24 @@ nav {
   grid-area: nav;
 }
 
+#comprar {
+  position: relative;
+}
+#comprar .button-checkout {
+  border-radius: 10px;
+  background: rgb(183, 59, 255);
+  transition: all 0.5s;
+  border: 0.5px solid rgba(0, 0, 0, 0.384);
+  padding: 0.5%;
+  position: absolute;
+  right: 0px;
+}
+#comprar .button-checkout:hover {
+  background: rgb(255, 83, 218);
+  padding: 1%;
+  border-radius: 1px;
+}
+
 .elegircategoria {
   font-size: 25px;
   color: #2c032c;
@@ -188,7 +205,7 @@ nav {
   padding: 5%;
   margin-bottom: 10px;
   margin-top: 5px;
-  background: linear-gradient(rgb(231, 12, 147), rgba(255, 173, 255, 0));
+  background: linear-gradient(rgb(255, 165, 220), rgba(255, 173, 255, 0));
   text-align: center;
   text-decoration: solid;
   color: black;
@@ -227,6 +244,7 @@ nav {
   padding-top: 0.5%;
   margin: 0%;
   grid-column-gap: 1.5%;
+  grid-row-gap: 50px;
 }
 
 .listadeproductos {
@@ -258,11 +276,26 @@ nav {
   text-align: center;
   text-decoration: none;
   border-radius: 10px;
-  height: 350px;
+  height: 102%;
 }
 .product-item a:hover {
   text-decoration: none;
   color: white;
+}
+.product-item .button-add {
+  padding: 1%;
+  border-radius: 10px;
+  background: rgb(183, 59, 255);
+  transition: all 0.5s;
+  border: 0.5px solid rgba(0, 0, 0, 0.384);
+  bottom: 60px;
+  position: relative;
+  right: -10px;
+}
+.product-item .button-add:hover {
+  background: rgb(255, 83, 218);
+  padding: 2%;
+  border-radius: 1px;
 }
 .product-item img {
   width: 100%;
@@ -325,7 +358,7 @@ nav {
   background-color: rgb(217, 94, 255);
 }
 
-.btnseguir {
+.button-add {
   background-color: rgb(255, 0, 191);
   border-radius: 20rem;
   padding: 2.5%;
@@ -337,7 +370,7 @@ nav {
   margin-top: 2%;
   width: 90%;
 }
-.btnseguir:hover {
+.button-add:hover {
   -webkit-box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
   box-shadow: 10px 10px 14px 2px rgba(0, 0, 0, 0.47);
   color: white;
