--- a/SASS/origen.scss
+++ b/SASS/origen.scss
@@ -20,7 +20,7 @@
 
 * {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	background-color: rgba(241, 161, 217, 0.082);
+
 	box-sizing: border-box;
 }
 body {
@@ -158,6 +158,26 @@ nav {
 	grid-area: nav;
 }
 
+
+#comprar{
+	position: relative;
+
+	.button-checkout{
+		border-radius: 10px;
+		background:rgb(183, 59, 255);
+		transition: all .5s;
+		border: .5px solid rgba(0, 0, 0, 0.384);
+		padding: .5%;
+		position: absolute;
+		right: 0px;
+
+		&:hover{
+			background: rgb(255, 83, 218);
+			padding: 1%;
+			border-radius: 1px;
+		}
+	}
+}
 .elegircategoria {
     font-size: 25px;
     color: #2c032c;
@@ -190,7 +210,7 @@ nav {
 		padding: 5%;
 		margin-bottom: 10px;
 		margin-top: 5px;
-		background: linear-gradient(rgb(231, 12, 147), rgb(255 173 255 / 0%));
+		background: linear-gradient(rgb(255, 165, 220), rgb(255 173 255 / 0%));
 		text-align: center;
 		text-decoration: solid;
 		color: black;
@@ -231,6 +251,7 @@ nav {
 	padding-top: 0.5%;
 	margin: 0%;
 	grid-column-gap: 1.5%;
+	grid-row-gap: 50px;
 }
 
 .listadeproductos {
@@ -262,13 +283,30 @@ nav {
 		text-align: center;
 		text-decoration: none;
 		border-radius: 10px;
-		height: 350px;
+		height: 102%;
 		&:hover{
 			text-decoration: none;
 			color: white;
 		}
 	}
 	
+	.button-add{
+		padding: 1%;
+		border-radius: 10px;
+		background:rgb(183, 59, 255);
+		transition: all .5s;
+		border: .5px solid rgba(0, 0, 0, 0.384);
+		bottom: 60px;
+		position: relative;
+		right: -10px;
+
+		&:hover{
+			background: rgb(255, 83, 218);
+			padding: 2%;
+			border-radius: 1px;
+		}
+	}
+
     img {
 		width: 100%;
 		height: 300px;
@@ -333,7 +371,7 @@ nav {
 		background-color: rgb(217, 94, 255);
 	}
 }
-.btnseguir {
+.button-add {
 	background-color: rgb(255, 0, 191);
 	border-radius: 20rem;
 	padding: 2.5%;
